Add new http transport params to azure, gcs, s3 storage drivers
This enables the azure, gcs, and s3 storage driver users to disable keep alives `"disablekeepalives"`.

Fixes #4159

Signed-off-by: T Van Doren <108194999+tvdfly@users.noreply.github.com>

--- a/docs/content/storage-drivers/s3.md
+++ b/docs/content/storage-drivers/s3.md
@@ -21,6 +21,7 @@ Amazon S3 or S3 compatible services for object storage.
 | `keyid`  | no | Optional KMS key ID to use for encryption (encrypt must be true, or this parameter is ignored). The default is `none`. |
 | `secure`  | no | Indicates whether to use HTTPS instead of HTTP. A boolean value. The default is `true`. |
 | `skipverify`  | no  | Skips TLS verification when the value is set to `true`. The default is `false`. |
+| `disablekeepalives` | no | Disables HTTP keep-alives on the HTTP tranport when `true`. Each connection to the server will be used for a single HTTP request. The default is `false`. |
 | `v4auth`  | no | Indicates whether the registry uses Version 4 of AWS's authentication. The default is `true`. |
 | `chunksize`  | no | The S3 API requires multipart upload chunks to be at least 5MB. This value should be a number that is larger than 5 * 1024 * 1024.|
 | `multipartcopychunksize` | no | Default chunk size for all but the last S3 Multipart Upload part when copying stored objects. |
@@ -32,6 +33,9 @@ Amazon S3 or S3 compatible services for object storage.
 | `usedualstack` | no | Use AWS dual-stack API endpoints. |
 | `accelerate` | no | Enable S3 Transfer Acceleration. |
 | `objectacl`  | no | The S3 Canned ACL for objects. The default value is "private". |
+| `usedualstack` | no | Use AWS S3 dual-stack endpoints, which support both IPv6 and IPv4, when set to `true`. The default is `false`. |
+| `multipartcombinesmallpart` | no | Combines small pending uploads with the ready part when `true`. The default is `true`. |
+| `accelerate` | no | Use AWS S3 Transfer Acceleration endpoints when set to `true`. The default is `false`. |
 | `loglevel`  | no | The log level for the S3 client. The default value is `off`. |
 
 > **Note** You can provide empty strings for your access and secret keys to run the driver
