Add a note regarding redirects to pre-signed URLs
Signed-off-by: Mikhail f. Shiryaev <mr.felixoid@gmail.com>

--- a/docs/content/storage-drivers/s3.md
+++ b/docs/content/storage-drivers/s3.md
@@ -7,6 +7,9 @@ title: S3 storage driver
 An implementation of the `storagedriver.StorageDriver` interface which uses
 Amazon S3 or S3 compatible services for object storage.
 
+> **Note** When S3 storage is used, registry redirects to a pre-signed URL for the requested object.
+> By not having to serve the stored images directly, this allows running registry on hosts with lightweight resource requirements.
+
 ## Parameters
 
 | Parameter     | Required | Description                                                                                                                                                                                                                                                         |
