feat: add option to walk with delimiter in s3
When walking without a delimiter it requires iterating over every file in s3 including
all layers + manifest objects. Everything is filtered client side. For large registries
this will likely time out. Use delimiter + a stack to process directories, and interpret
directories as repositories.

Signed-off-by: Freddy Wieffering <fwieffering@gmail.com>

--- a/docs/content/storage-drivers/s3.md
+++ b/docs/content/storage-drivers/s3.md
@@ -37,6 +37,7 @@ Amazon S3 or S3 compatible services for object storage.
 | `usefipsendpoint` | no | Use AWS FIPS endpoints for S3 API operations. |
 | `objectacl`  | no | The S3 Canned ACL for objects. The default value is "private". |
 | `loglevel`  | no | The log level for the S3 client. The default value is `off`. |
+| `usedelimiterwalk` | no | Use delimiter-based directory traversal for catalog operations. The default value is `false`. |
 
 > **Note** You can provide empty strings for your access and secret keys to run the driver
 > on an ec2 instance and handles authentication with the instance's credentials. If you
@@ -82,6 +83,8 @@ Amazon S3 or S3 compatible services for object storage.
 `objectacl`: (optional) The canned object ACL to be applied to each registry object. Defaults to `private`. If you are using a bucket owned by another AWS account, it is recommended that you set this to `bucket-owner-full-control` so that the bucket owner can access your objects. Other valid options are available in the [AWS S3 documentation](https://docs.aws.amazon.com/AmazonS3/latest/dev/acl-overview.html#canned-acl).
 
 `loglevel`: (optional) Valid values are: `off` (default), `debug`, `debugwithsigning`, `debugwithhttpbody`, `debugwithrequestretries`, `debugwithrequesterrors` and `debugwitheventstreambody`. See the [AWS SDK for Go API reference](https://docs.aws.amazon.com/sdk-for-go/api/aws/#LogLevelType) for details.
+
+`usedelimiterwalk`: (optional) When enabled, uses delimiter-based directory traversal for catalog operations, which can significantly improve performance when listing repositories. The delimiter-based approach uses the S3 `ListObjectsV2` API with the delimiter parameter to efficiently navigate the directory structure level-by-level, rather than listing all objects recursively. This is particularly beneficial for registries with many repositories or deeply nested directory structures. Defaults to `false` to maintain backward compatibility. It is recommended to enable this for production registries with large numbers of repositories.
 
 ## S3 permission scopes
 
